test/netlist/error/duplicated-unused.bop
A(a, b, d) = c
with unused = (d, d)
where
  c = And(a, b);
end where;
